<resources>
    <string name="app_name">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">log in</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_bazzar">New to Bazzar?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="productname">ProductName</string>
    <string name="price">Price</string>
    <string name="title">title</string>
    <string name="status">status</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="mymarket">myMarket</string>
    <string name="activated">activated</string>
    <string name="creation_time">Creation Time</string>
    <string name="phone_number">phone number</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_product">Add product</string>
    <string name="myproducts">myProducts</string>
    <string name="product_title">Product title</string>
    <string name="price_per_unit">price per unit</string>
    <string name="units">units</string>
    <string name="active">active</string>
    <string name="is_active">is active</string>
    <string name="rating">rating</string>
    <string name="unittype">unitType</string>
    <string name="price_type">price Type</string>
</resources>