<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/timeline"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="1"
        android:title="@string/timeline"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/myProducts"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:title="@string/myproducts"
        app:showAsAction="ifRoom" />
</menu>